<resources>
    <string name="app_name">PregnancyApp</string>


    <string name="start_from">از تاریخ</string>
    <string name="end_range">تا تاریخ</string>
    <string name="report_items">موارد ارسالی</string>
    <string name="time_range">بازه‌ی زمانی</string>
    <string name="make_report">ایجاد و ارسال گزارش</string>
    <string name="enter_pregnancy_start_date">زمان تقریبی شروع بارداری را وارد نمایید</string>
    <string name="enter_birth_date">سال تولد خود را وارد نمایید</string>
    <string name="next_stage">مرحله بعد</string>
    <string name="login">ورود</string>
    <string name="select_blood_type">گروه خونی خود را وارد نمایید</string>
    <string name="make_report_for_doctor">گزارش‌گیری برای پزشک</string>
    <string name="read_more">ادامه مطلب</string>
    <string name="no_logged_data">تاکنون اطلاعاتی ثبت نکرده‌اید</string>
    <string name="enter_drug_name">نام دارو را وارد کنید</string>
    <string name="description">توضیحات</string>
    <string name="drug_name">داروی مصرفی</string>
    <string name="min">کمینه</string>
    <string name="max">بیشینه</string>
    <string name="blood_pressure">فشار خون</string>
    <string name="mother_weight">وزن مادر</string>
    <string name="kilogram">(کیلوگرم)</string>
    <string name="fever">تب و لرز</string>
    <string name="have_not">ندارم</string>
    <string name="have">دارم</string>
    <string name="save_log">ثبت اطلاعات</string>
    <string name="save_daily_log">ثبت اطلاعات روزانه</string>
    <string name="personal_info">اطلاعات فردی</string>
    <string name="pregnancy_start_date">تاریخ شروع بارداری</string>
    <string name="birth_date">تاریخ تولد</string>
    <string name="blood_type">گروه خونی</string>
    <string name="font_size">اندازه فونت</string>
    <string name="receive_output">دریافت خروجی</string>
    <string name="report_for_doctor">گزارش گیری برای پزشک</string>
    <string name="about_us">درباره ما</string>
    <string name="faq">سوالات متداول</string>
    <string name="general">مقالات عمومی</string>
    <string name="childbirth">زایمان</string>
    <string name="nutrition">تغذیه و ورزش</string>
    <string name="use_cigarette">مصرف سیگار</string>
    <string name="had">داشتم</string>
    <string name="had_not">نداشتم</string>
    <string name="use_alcohol">مصرف الکل</string>
    <string name="sleep_time">میزان خواب</string>
    <string name="weight">(ساعت)</string>
    <string name="minute">(دقیقه)</string>
    <string name="exercise_time">میزان ورزش</string>
    <string name="embryo_evolution">تکامل جنین در این هفته</string>
    <string name="mother_care">مراقبت‌های مادر در این هفته</string>
    <string name="select_font_size">انتخاب اندازه متن</string>
    <string name="select_blood_type1">انتخاب گروه خونی</string>
    <string name="wrong_selected_date">تاریخ انتخابی صحیح نیست</string>
    <string name="data_saved">اطلاعات ذخیره شد</string>
    <string name="saved_data">اطلاعات ثبت شده</string>

</resources>
