<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@color/white"
    tools:context=".View.main.MakeReportFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="?attr/colorPrimary"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layoutDirection="ltr">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/img_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:padding="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_back" />

            <TextView
                android:id="@+id/tv_app_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/make_report_for_doctor"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/img_back"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:fontFamily="@font/iransans_medium" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/tv_time_range"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="29dp"
        android:layout_marginRight="29dp"
        android:text="@string/time_range"
        android:textColor="#4d0b0b"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        tools:fontFamily="@font/iransans_medium" />

    <TextView
        android:id="@+id/tv_range_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="34dp"
        android:layout_marginRight="34dp"
        android:text="@string/start_from"
        android:textColor="#af0608"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_time_range"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_time_range"
        tools:fontFamily="@font/iransans_medium" />

    <Button
        android:id="@+id/btn_start_range"
        android:layout_width="244dp"
        android:layout_height="38dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/btn_range_bkg"
        android:textColor="#797979"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_range_start"
        tools:fontFamily="@font/iransans_medium"
        tools:text="1397/02/02" />

    <TextView
        android:id="@+id/tv_range_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="34dp"
        android:layout_marginRight="34dp"
        android:text="@string/end_range"
        android:textColor="#af0608"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_time_range"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_start_range"
        tools:fontFamily="@font/iransans_medium" />


    <Button
        android:id="@+id/btn_end_range"
        android:layout_width="244dp"
        android:layout_height="38dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/btn_range_bkg"
        android:textColor="#797979"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_range_end"
        tools:fontFamily="@font/iransans_medium"
        tools:text="1397/02/02" />

    <TextView
        android:id="@+id/tv_report_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/report_items"
        android:textColor="#4d0b0b"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_time_range"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_end_range"
        tools:fontFamily="@font/iransans_medium" />

    <CheckBox
        android:id="@+id/chb_drugs"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:checked="true"
        android:ems="6"
        android:gravity="center|start"
        android:layoutDirection="rtl"
        android:text="داروهای مصرفی"
        android:textColor="#555555"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_report_options"
        app:layout_constraintStart_toEndOf="@id/chb_blood_pressure"
        app:layout_constraintTop_toBottomOf="@+id/tv_report_options"
        tools:fontFamily="@font/iransans_medium" />

    <CheckBox
        android:id="@+id/chb_blood_pressure"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="14dp"
        android:checked="true"
        android:ems="6"
        android:gravity="start|center"
        android:layoutDirection="rtl"
        android:text="فشار خون"
        android:textColor="#555555"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@id/chb_drugs"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_report_options"
        tools:fontFamily="@font/iransans_medium" />

    <CheckBox
        android:id="@+id/chb_mother_weight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:checked="true"
        android:ems="6"
        android:gravity="center|start"
        android:layoutDirection="rtl"
        android:text="وزن مادر"
        android:textColor="#555555"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_report_options"
        app:layout_constraintStart_toEndOf="@id/chb_fever"
        app:layout_constraintTop_toBottomOf="@+id/chb_drugs"
        tools:fontFamily="@font/iransans_medium" />


    <CheckBox
        android:id="@+id/chb_fever"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="18dp"
        android:checked="true"
        android:ems="6"
        android:gravity="center|start"
        android:layoutDirection="rtl"
        android:text="@string/fever"
        android:textColor="#555555"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/chb_mother_weight"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chb_blood_pressure"
        tools:fontFamily="@font/iransans_medium" />

    <CheckBox
        android:id="@+id/chb_cigarette"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:checked="true"
        android:ems="6"
        android:gravity="center|start"
        android:layoutDirection="rtl"
        android:text="@string/use_cigarette"
        android:textColor="#555555"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_report_options"
        app:layout_constraintStart_toEndOf="@id/chb_alcohol"
        app:layout_constraintTop_toBottomOf="@+id/chb_mother_weight"
        tools:fontFamily="@font/iransans_medium" />

    <CheckBox
        android:id="@+id/chb_alcohol"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="18dp"
        android:checked="true"
        android:ems="6"
        android:gravity="center|start"
        android:layoutDirection="rtl"
        android:text="@string/use_alcohol"
        android:textColor="#555555"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/chb_cigarette"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chb_fever"
        tools:fontFamily="@font/iransans_medium" />


    <CheckBox
        android:id="@+id/chb_sleep_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:checked="true"
        android:ems="6"
        android:gravity="center|start"
        android:layoutDirection="rtl"
        android:text="@string/sleep_time"
        android:textColor="#555555"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_report_options"
        app:layout_constraintStart_toEndOf="@id/chb_exercise"
        app:layout_constraintTop_toBottomOf="@+id/chb_alcohol"
        tools:fontFamily="@font/iransans_medium" />

    <CheckBox
        android:id="@+id/chb_exercise"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="18dp"
        android:checked="true"
        android:ems="6"
        android:gravity="center|start"
        android:layoutDirection="rtl"
        android:text="@string/exercise_time"
        android:textColor="#555555"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/chb_sleep_time"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chb_alcohol"
        tools:fontFamily="@font/iransans_medium" />

    <Button
        android:id="@+id/btn_make_report"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/btn_make_report_bkg"
        android:gravity="center"
        android:text="@string/make_report"
        android:textColor="#ffffff"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chb_sleep_time"
        app:layout_constraintWidth_percent=".83"
        tools:fontFamily="@font/iransans_medium" />

</androidx.constraintlayout.widget.ConstraintLayout>