<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/bottom_bar_height"
    tools:background="@color/white"
    tools:context=".View.main.SettingsFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.3"
        android:scaleType="centerCrop"
        android:src="@drawable/bubble_bkg"
        android:tint="@color/colorPrimary" />

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="52dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:src="@tools:sample/avatars[1]" />

    <TextView
        android:id="@+id/tv_personal_info_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="18dp"
        android:layout_marginRight="18dp"
        android:lineSpacingExtra="-3.9sp"
        android:text="@string/personal_info"
        android:textColor="#af0608"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_logo"
        tools:fontFamily="@font/iransans_medium" />


    <TextView
        android:id="@+id/tv_pregnancy_start_date_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:lineSpacingExtra="-5.6sp"
        android:text="@string/pregnancy_start_date"
        android:textColor="#6c1112"
        android:textSize="13sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toEndOf="@+id/tv_pregnancy_start_date"
        app:layout_constraintTop_toBottomOf="@+id/tv_personal_info_title"
        tools:fontFamily="@font/iransans_medium" />


    <TextView
        android:id="@+id/tv_pregnancy_start_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="-5.6sp"
        tools:text="1397/3/21"
        android:textColor="#af0608"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_pregnancy_start_date_title"
        app:layout_constraintEnd_toStartOf="@+id/tv_pregnancy_start_date_title"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/tv_pregnancy_start_date_title"
        tools:fontFamily="@font/iransans_medium" />

    <TextView
        android:id="@+id/tv_birth_date_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:lineSpacingExtra="-5.6sp"
        android:text="@string/birth_date"
        android:textColor="#6c1112"
        android:textSize="13sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toEndOf="@+id/tv_birth_date"
        app:layout_constraintTop_toBottomOf="@+id/tv_pregnancy_start_date_title"
        tools:fontFamily="@font/iransans_medium" />

    <TextView
        android:id="@+id/tv_birth_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="-5.6sp"
        tools:text="1345/12/2"
        android:textColor="#af0608"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_birth_date_title"
        app:layout_constraintEnd_toStartOf="@+id/tv_birth_date_title"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/tv_birth_date_title"
        tools:fontFamily="@font/iransans_medium" />

    <TextView
        android:id="@+id/tv_blood_type_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:lineSpacingExtra="-5.6sp"
        android:text="@string/blood_type"
        android:textColor="#6c1112"
        android:textSize="13sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toEndOf="@+id/tv_blood_type"
        app:layout_constraintTop_toBottomOf="@+id/tv_birth_date_title"
        tools:fontFamily="@font/iransans_medium" />

    <TextView
        android:id="@+id/tv_blood_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="-5.6sp"
        tools:text="O+"
        android:textColor="#af0608"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_blood_type_title"
        app:layout_constraintEnd_toStartOf="@+id/tv_blood_type_title"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/tv_blood_type_title"
        tools:fontFamily="@font/iransans_medium" />

    <TextView
        android:id="@+id/tv_font_size_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:lineSpacingExtra="-5.6sp"
        android:text="@string/font_size"
        android:textColor="#6c1112"
        android:textSize="13sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toEndOf="@+id/tv_font_size"
        app:layout_constraintTop_toBottomOf="@+id/tv_blood_type_title"
        tools:fontFamily="@font/iransans_medium" />

    <TextView
        android:id="@+id/tv_font_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="-5.6sp"
        tools:text="25"
        android:textColor="#af0608"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_font_size_title"
        app:layout_constraintEnd_toStartOf="@+id/tv_font_size_title"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/tv_font_size_title"
        tools:fontFamily="@font/iransans_medium" />

    <View
        android:id="@+id/view_divider1"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:background="#d0d0d0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_font_size_title" />

    <TextView
        android:id="@+id/tv_report_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:lineSpacingExtra="-3.9sp"
        android:text="@string/receive_output"
        android:textColor="#af0608"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_personal_info_title"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/view_divider1"
        tools:fontFamily="@font/iransans_medium" />


    <TextView
        android:id="@+id/tv_make_report"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:lineSpacingExtra="-5.6sp"
        android:text="@string/report_for_doctor"
        android:textColor="#6c1112"
        android:textSize="13sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/tv_report_title"
        tools:fontFamily="@font/iransans_medium" />

    <View
        android:id="@+id/view_divider2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:background="#d0d0d0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_make_report" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:lineSpacingExtra="-5.6sp"
        android:text="@string/about_us"
        android:textColor="#6c1112"
        android:textSize="13sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/view_divider2"
        tools:fontFamily="@font/iransans_medium" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="31dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="57dp" />


</androidx.constraintlayout.widget.ConstraintLayout>